--- a/tests/configs/server.yml
+++ b/tests/configs/server.yml
@@ -96,3 +96,20 @@ client:
     ca_cert_pem: './certs/server.crt'
     cert_server_name: 'localhost'
     dial_block: true
+
+  oauth2:
+    id_token_validators:
+      - type: 'jwks'
+        token:
+          source: 'google'
+          id_key_name: 'tid'
+          id_token_key_name: 'id_token'
+          token_source_key_name: 'token_source'
+        openid_conf_url: 'https://accounts.google.com/.well-known/openid-configuration'
+      - type: 'jwks'
+        token:
+          source: 'woong'
+          id_key_name: 'tid'
+          id_token_key_name: 'id_token'
+          token_source_key_name: 'token_source'
+        openid_conf_url: 'https://accounts.google.com/.well-known/openid-configuration'
