fix woong config

--- a/configs/tests/config.yml
+++ b/configs/tests/config.yml
@@ -10,3 +10,41 @@ http:
   header:
     auth:
       token: "asdf"
+
+
+client:
+  oauth2:
+    google:
+      client_id: ''
+      client_secret: ''
+      redirect_url: 'https://localhost:5558/v1/auth/callback/{token_source}'
+      scopes:
+        - 'openid'
+        - 'https://www.googleapis.com/auth/userinfo.email'
+        - 'https://www.googleapis.com/auth/userinfo.profile'
+      auth_url: 'https://accounts.google.com/o/oauth2/auth'
+      token_url: 'https://oauth2.googleapis.com/token'
+      openid_conf_url: 'https://accounts.google.com/.well-known/openid-configuration'
+      id_token_cookie: 'id_token'
+      authrequest:
+        # direct address
+        response_url: 'https://localhost:5558/v1/auth/request/{token_source}/{auth_request_id}'
+        auth_url: 'https://localhost:5558/v1/auth/authorize/{token_source}/{auth_request_id}'
+        wait: 300
+    kakao:
+      client_id: ''
+      client_secret: ''
+      redirect_url: 'https://localhost:5558/v1/auth/callback/{token_source}'
+      scopes:
+        - 'openid'
+        - 'https://www.googleapis.com/auth/userinfo.email'
+        - 'https://www.googleapis.com/auth/userinfo.profile'
+      auth_url: 'https://accounts.google.com/o/oauth2/auth'
+      token_url: 'https://oauth2.googleapis.com/token'
+      openid_conf_url: 'https://accounts.google.com/.well-known/openid-configuration'
+      id_token_cookie: 'id_token'
+      authrequest:
+        # direct address
+        response_url: 'https://localhost:5558/v1/auth/request/{token_source}/{auth_request_id}'
+        auth_url: 'https://localhost:5558/v1/auth/authorize/{token_source}/{auth_request_id}'
+        wait: 300
