--- a/configs/tests/config.yml
+++ b/configs/tests/config.yml
@@ -17,7 +17,7 @@ client:
     google:
       client_id: ''
       client_secret: ''
-      redirect_url: 'https://localhost:5558/v1/auth/callback/{token_source}'
+      redirect_url: 'https://localhost:5558/v1/oauth2/callback/{token_source}'
       scopes:
         - 'openid'
         - 'https://www.googleapis.com/auth/userinfo.email'
@@ -28,13 +28,13 @@ client:
       id_token_cookie: 'id_token'
       authrequest:
         # direct address
-        response_url: 'https://localhost:5558/v1/auth/request/{token_source}/{auth_request_id}'
-        auth_url: 'https://localhost:5558/v1/auth/authorize/{token_source}/{auth_request_id}'
+        response_url: 'https://localhost:5558/v1/oauth2/request/{token_source}/{auth_request_id}'
+        auth_url: 'https://localhost:5558/v1/oauth2/authorize/{token_source}/{auth_request_id}'
         wait: 300
     kakao:
       client_id: ''
       client_secret: ''
-      redirect_url: 'https://localhost:5558/v1/auth/callback/{token_source}'
+      redirect_url: 'https://localhost:5558/v1/oauth2/callback/{token_source}'
       scopes:
         - 'openid'
         - 'https://www.googleapis.com/auth/userinfo.email'
@@ -45,6 +45,6 @@ client:
       id_token_cookie: 'id_token'
       authrequest:
         # direct address
-        response_url: 'https://localhost:5558/v1/auth/request/{token_source}/{auth_request_id}'
-        auth_url: 'https://localhost:5558/v1/auth/authorize/{token_source}/{auth_request_id}'
+        response_url: 'https://localhost:5558/v1/oauth2/request/{token_source}/{auth_request_id}'
+        auth_url: 'https://localhost:5558/v1/oauth2/authorize/{token_source}/{auth_request_id}'
         wait: 300
